feat: add image upload functionality to CMS item forms and enhance image handling in API

--- a/src/admin/@/styles/tiptap-extensions-styles.scss
+++ b/src/admin/@/styles/tiptap-extensions-styles.scss
@@ -1,5 +1,5 @@
-@import "./variables";
-@import "./keyframe-animations";
+@use "./variables";
+@use "./keyframe-animations";
 
 .tiptap {
   h1,
@@ -63,5 +63,6 @@
   a {
     color: var(--tt-color-text-blue);
     cursor: pointer;
+    text-decoration: underline;
   }
 }
